# cryoSPHERE_afi

./: .gitignore  .parameters.yaml.swp  .pyproject.toml.swp  .requirements.txt.swp  Dockerfile  README.md  compose.yaml  main.py  parameters.yaml  parameters_multimer.yaml  parameters_two_segmentation.yaml  pyproject.toml  test.py
cryosphere/: README.md  cryosphere_train.py
cryosphere/data/: analyze.py  center_origin.py
cryosphere/model/: ctf.py  dataset.py  loss.py  renderer.py  segmentation.py  utils.py  vae.py
cryosphere/test/: test_cs_star_equivalence.py  test_segmentation.py
data/: analyze.py
model/: gmm.py  loss.py  polymer.py  utils.py  vae.py
